dev/versioned_readmes/1.6/tooltip/readme.md
<kol-alert _type="warning">Die **Tooltip**-Komponente wird innerhalb von KoliBri verwendet und ist nicht dafür vorgesehen in der Anwendungsentwicklung verwendet zu werden. Denn der Tooltip ist nur dann wirklich barrierefrei, wenn von einem Referenzelement auf das Tooltip verwiesen wird.</kol-alert>

Die **Tooltip**-Komponente implementiert das Gegenstück zum `Aria-Label`. Es ist also explizit nur dafür vorgesehen, dem/der Nutzer:in ohne Screenreader die Beschriftung eines Elementes anzuzeigen.

Ein geöffneter Tooltip lässt sich mit der `Escape`-Taste schließen, um ggf. überlagerte Seiteninformationen wieder sichtbar zu machen.

**Hinweis:** Damit der Tooltip korrekt ausgerichtet wird, darf das Referenz-Element nicht `display: inline` haben.

## Barrierefreiheit

Die Tooltip-Komponente wird bei Fokus oder bei Bewegen der Maus über dem Referenzelement angezeigt und dient ausschließlich dem/der sehenden Nutzer:in ohne Screenreader die Beschriftung (Aria-Label) lesen zu können. Der Text des Tooltips ist selbst nicht mit der Tastatur erreichbar und zudem mittels Aria-Hidden für die Screenreader versteckt.

<kol-alert _type="info">
Aus Sicht des Barrierefreiheitstests können Tooltips ignoriert werden, solange zudem von der Entwicklung sichergestellt wurde, dass der Tooltip-Text auch in gleicher Weise vom Screenreader vorgelesen wird.
</kol-alert>

## Links und Referenzen

- <kol-link _href="https://tollwerk.de/projekte/tipps-techniken-inklusiv-barrierefrei/titel-tooltips-toggletips" _label="https://tollwerk.de/projekte/tipps-techniken-inklusiv-barrierefrei/titel-tooltips-toggletips" _target="_blank"></kol-link>

<!-- Auto Generated Below -->


## Properties

| Property              | Attribute | Description                                                                                                        | Type                                                  | Default     |
| --------------------- | --------- | ------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------- | ----------- |
| `_align`              | `_align`  | Defines the alignment of the tooltip in relation to the parent element.                                            | `"bottom"` \| `"left"` \| `"right"` \| `"top"` \| `undefined` | `'top'`     |
| `_id`                 | `_id`     | Defines the internal ID of the primary component element.                                                          | `string` \| `undefined`                                 | `undefined` |
| `_label` _(required)_ | `_label`  | Defines the visible or semantic label of the component (e.g. aria-label, label, headline, caption, summary, etc.). | `string`                                              | `undefined` |


## Dependencies

### Used by

 - [kol-abbr](./abbr)
 - kol-button-wc
 - [kol-input-checkbox](./input-checkbox)
 - [kol-input-color](./input-color)
 - [kol-input-date](./input-date)
 - [kol-input-email](./input-email)
 - [kol-input-file](./input-file)
 - [kol-input-number](./input-number)
 - [kol-input-password](./input-password)
 - [kol-input-radio](./input-radio)
 - [kol-input-range](./input-range)
 - [kol-input-text](./input-text)
 - kol-link-wc
 - [kol-select](./select)
 - [kol-textarea](./textarea)

### Depends on

- kol-span-wc

### Graph
```mermaid
graph TD;
  kol-tooltip-wc --> kol-span-wc
  kol-span-wc --> kol-icon
  kol-abbr --> kol-tooltip-wc
  kol-button-wc --> kol-tooltip-wc
  kol-input-checkbox --> kol-tooltip-wc
  kol-input-color --> kol-tooltip-wc
  kol-input-date --> kol-tooltip-wc
  kol-input-email --> kol-tooltip-wc
  kol-input-file --> kol-tooltip-wc
  kol-input-number --> kol-tooltip-wc
  kol-input-password --> kol-tooltip-wc
  kol-input-radio --> kol-tooltip-wc
  kol-input-range --> kol-tooltip-wc
  kol-input-text --> kol-tooltip-wc
  kol-link-wc --> kol-tooltip-wc
  kol-select --> kol-tooltip-wc
  kol-textarea --> kol-tooltip-wc
  style kol-tooltip-wc fill:#f9f,stroke:#333,stroke-width:4px
```

----------------------------------------------


